Use proper KTH-Style favourite icon and fix gap between star and text

--- a/kpm/kpm-frontend/src/components/icons.scss
+++ b/kpm/kpm-frontend/src/components/icons.scss
@@ -4,6 +4,7 @@
   width: 1.25em;
   height: 1.25em;
   flex-shrink: 0;
+  color: var(--kpmIconFg);
 }
 
 @media #{$mblBreakpoint} {
