--- a/kpm/kpm-frontend/src/panes/groups.scss
+++ b/kpm/kpm-frontend/src/panes/groups.scss
@@ -21,13 +21,8 @@
       gap: $rowGap $colGap;
 
       .icon.star {
-        color: var(--kpmIconStarBg);
         // Fix alignment error
         margin-bottom: 2px;
-
-        &.active {
-          color: var(--kpmIconStarActiveBg);
-        }
       }
     }
   }
