--- a/kpm/kpm-frontend/src/panes/programme.scss
+++ b/kpm/kpm-frontend/src/panes/programme.scss
@@ -18,16 +18,11 @@
       align-items: flex-start;
       width: $colWidth;
       margin-bottom: 0;
-      gap: $rowGap $colGap;
+      gap: $rowGap;
 
       .icon.star {
-        color: var(--kpmIconStarBg);
         // Fix alignment error
         margin-bottom: 2px;
-
-        &.active {
-          color: var(--kpmIconStarActiveBg);
-        }
       }
     }
   }
